--- a/src/pages/_page-common.scss
+++ b/src/pages/_page-common.scss
@@ -10,6 +10,15 @@
 @use '@carbon/react/scss/breakpoint' as *;
 
 @mixin page-common() {
+  * {
+    /* 
+    text-wrap-style: balance aims to improve typography by creating more visually appealing text blocks. 
+    When text is balanced, the browser attempts to distribute text more evenly across lines, 
+    avoiding situations where you have very long lines followed by very short lines (orphans).
+    */
+    text-wrap-style: balance;
+  }
+
   h1,
   dd {
     @include type-style('heading-07');
